<?xml version="1.0" encoding="utf-8"?>
 <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent">

            <!--Put form controls here-->
            <TextView
                android:id="@+id/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CreateContact"
                android:textSize="10pt"
                android:paddingBottom="30dp">
            </TextView>
            <EditText
                android:id="@+id/etName"
                android:layout_height="wrap_content"
                android:hint="@string/fName"
                android:inputType="textPersonName"
                android:layout_width="fill_parent">
            </EditText>
            <EditText
                android:id="@+id/etSurname"
                android:layout_height="wrap_content"
                android:hint="@string/Surname"
                android:inputType="textPersonName"
                android:layout_width="fill_parent">
            </EditText>
            <EditText
                android:id="@+id/etNumber"
                android:layout_height="wrap_content"
                android:hint="@string/number"
                android:inputType="textPersonName"
                android:layout_width="fill_parent">
            </EditText>
            <EditText
                android:id="@+id/etEmail"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textMultiLine"
                android:layout_width="fill_parent"
                android:paddingBottom="30dp">
            </EditText>
            <Button
                android:id="@+id/btn"
                android:layout_height="wrap_content"
                android:text="@string/Save"
                android:layout_width="fill_parent">
            </Button>

        </LinearLayout>
    </ScrollView>
